--- a/src/assets/sass/base/elements/_chart.scss
+++ b/src/assets/sass/base/elements/_chart.scss
@@ -40,6 +40,7 @@ ul.progress-chart-block {
 
         .progress {
             border-radius: 2px;
+            height: size(8);
         }
     }
 }
