Creates new pages plus refactor existing pages with compoenents

--- a/src/assets/sass/abstracts/variables/_colors.scss
+++ b/src/assets/sass/abstracts/variables/_colors.scss
@@ -21,6 +21,7 @@ $color__text-screen: #525b5f;
 $color__text-input: #707070;
 $color__text-heading: #252841;
 $color__dark: #404040;
+$color__placeholder: #cacaca;
 
 $color__table-border: #eaeaea;
 $color__tablehead-bg: $color__gray50;
@@ -35,4 +36,5 @@ $color__link: $primary; //royalblue
 $color__link-visited: #800080; //purple
 $color__link-hover: #191970; //midnightblue
 $color__text-main: #404040;
+
 
