--- a/src/assets/sass/base/_base.scss
+++ b/src/assets/sass/base/_base.scss
@@ -9,6 +9,7 @@
 @import "elements/lists";
 @import "elements/media";
 @import "elements/tables";
+@import "elements/datatables";
 @import "elements/card";
 @import "elements/forms";
 @import "elements/icons";
