Integrates api on top landing pages of dashboard

--- a/src/assets/sass/base/elements/_card.scss
+++ b/src/assets/sass/base/elements/_card.scss
@@ -59,7 +59,7 @@
             margin-bottom: size(25);
         }
 
-        img {
+        img, object, iframe {
             height: size(135);
             width: auto;
             margin: 0 auto;
