--- a/src/assets/sass/components/content/_main-container.scss
+++ b/src/assets/sass/components/content/_main-container.scss
@@ -139,14 +139,45 @@ section.all-campaigns-content {
 .top-landingpage-content {
     .card-image {
         display: flex;
-        align-items: center;
+        align-items: flex-start;
         justify-content: center;
         height: 100%;
+        padding-right: size(25);
+        padding-top: size(25);
+        padding-bottom: size(25);
 
         img {
             max-height: 390px;
             width: auto;
             margin: 10px auto;
+        }
+    }
+
+    .page-on-phone-preview{
+        height: 540px;
+        width: 330px;
+        position: relative;
+        border: 18px solid #252525;
+        background: #252525;
+        border-radius: 25px;
+
+        object {
+            border-radius: 15px;
+            height: 100%;
+            background-color: #fff;
+        }
+
+        &:before {
+            content: '';
+            display: block;
+            width: 60%;
+            background: #252525;
+            height: 30px;
+            border-radius: 12px;
+            top: 0;
+            left: 50%;
+            position: absolute;
+            transform: translate(-50%, -10px);
         }
     }
 }
