Integrates API on creatives page

--- a/src/assets/sass/base/elements/_tables.scss
+++ b/src/assets/sass/base/elements/_tables.scss
@@ -77,10 +77,12 @@ table {
 	.campaign-media {
 		align-items: center;
 	
-		.table-campaign-image {
+		.table-campaign-image, object {
 			width: size(40);
 			height: size(50);
 			object-fit: contain;
+			border: 1px solid #ddd;
+			margin-right: 10px;
 		}
 	
 		p {
