fixes issue of campaign graph of dashboard

--- a/src/assets/sass/base/elements/_chart.scss
+++ b/src/assets/sass/base/elements/_chart.scss
@@ -128,3 +128,9 @@ g.c3-axis text {
     stroke-dasharray: 0.1 10;
     transform: translate(3px, 1px)
   }
+
+  .date-range {
+    font-size: 12px;
+    line-height: normal;
+    color: #909090;
+}
