--- a/src/assets/sass/components/content/_main-container.scss
+++ b/src/assets/sass/components/content/_main-container.scss
@@ -152,8 +152,9 @@ section.all-campaigns-content {
         }
     }
 
-    .page-on-phone-preview{
+    .page-on-phone-preview {
         position: relative;
+        z-index: 0;
 
         object {
             height: 570px;
