--- a/src/assets/sass/base/elements/_buttons.scss
+++ b/src/assets/sass/base/elements/_buttons.scss
@@ -121,3 +121,20 @@
 		text-decoration: none;
 	}
 }
+
+.dropdown-filter {
+	.dropdown-menu {
+		font-size: size(13);
+		width: size(220);
+		
+		.dropdown-item {
+			border-bottom: 1px solid #eaeaea;
+			padding: .5rem 1rem;
+			white-space: normal;
+
+			&:last-child {
+				border: 0;
+			}
+		}
+	}
+}
