Integrates new api on stats with month filter

--- a/src/assets/sass/components/content/_breadcrumb.scss
+++ b/src/assets/sass/components/content/_breadcrumb.scss
@@ -39,6 +39,10 @@ section.filter-bar {
             font-weight: normal;
             margin: 0;
         }
+
+        .dropdown-filter .dropdown-menu {
+            width: size(150);
+        }
     }
 }
 
