--- a/src/assets/sass/base/_base.scss
+++ b/src/assets/sass/base/_base.scss
@@ -15,6 +15,7 @@
 @import "elements/icons";
 @import "elements/chart";
 @import "elements/datepicker";
+@import "elements/modal";
 
 /* Links
 --------------------------------------------- */
