R-12: Adds slider on the top creative section of dashboard and campaign detail page

--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -9,6 +9,11 @@
 --------------------------------------------- */
 @import "./node_modules/bootstrap/scss/bootstrap"; 
 
+// /* slick-carousel
+// --------------------------------------------- */
+// @import "./node_modules/slick-carousel/slick/slick.scss"; 
+// @import "./node_modules/slick-carousel/slick/slick-theme.scss";
+
 /*--------------------------------------------------------------
 # Generic
 --------------------------------------------------------------*/
