--- a/src/assets/sass/base/elements/_chart.scss
+++ b/src/assets/sass/base/elements/_chart.scss
@@ -134,3 +134,18 @@ g.c3-axis text {
     line-height: normal;
     color: #909090;
 }
+
+
+.slick-slide {
+    h3 {
+        background: #5f9ea0;
+color: #fff;
+font-size: 36px;
+line-height: 100px; 
+margin: 10px;
+padding: 2%;
+position: relative;
+text-align: center;
+    }
+}
+ 
