--- a/src/assets/sass/base/elements/_buttons.scss
+++ b/src/assets/sass/base/elements/_buttons.scss
@@ -129,22 +129,6 @@
 		max-height: size(215);
 		overflow-y: auto;
 
-		
-		&::-webkit-scrollbar {
-			width: .3rem;
-		}
-		
-		&::-webkit-scrollbar-track {
-			-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-		}
-		
-		&::-webkit-scrollbar-thumb {
-		background-color: rgba(0,0,0,0.3);
-		outline: 1px solid slategrey;
-		}
-
-
-		
 		.dropdown-item {
 			border-bottom: 1px solid #eaeaea;
 			padding: .5rem 1rem;
@@ -157,6 +141,21 @@
 	}
 }
 
+.advertiser-dropdown-menu,
+.dropdown-filter .dropdown-menu {
+	&::-webkit-scrollbar {
+		width: .3rem;
+	}
+	
+	&::-webkit-scrollbar-track {
+		-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	}
+	
+	&::-webkit-scrollbar-thumb {
+	background-color: rgba(0,0,0,0.3);
+	outline: 1px solid slategrey;
+	}
+} 
 
 .slick-prev:before, .slick-next:before {
     color: $primary;
