Adds datatable on creatives and landing pages

--- a/src/assets/sass/base/elements/_buttons.scss
+++ b/src/assets/sass/base/elements/_buttons.scss
@@ -142,7 +142,8 @@
 }
 
 .advertiser-dropdown-menu,
-.dropdown-filter .dropdown-menu {
+.dropdown-filter .dropdown-menu,
+ul.campaign-list {
 	&::-webkit-scrollbar {
 		width: .3rem;
 	}
