Replaces normal table with datatable on your campaign section and campaignlist page

--- a/src/assets/sass/base/elements/_datatables.scss
+++ b/src/assets/sass/base/elements/_datatables.scss
@@ -133,3 +133,15 @@ table {
 .jzCzGz {
     color: $primary !important;
 }
+
+.table-CampaignList .rdt_Table {
+	.rdt_TableRow, .rdt_TableHeadRow {
+		> div:first-child {
+			min-width: 200px;
+		}
+	} 
+
+	.guAIKK {
+		padding-left: 0;
+	}
+}
