--- a/src/assets/sass/components/content/_main-container.scss
+++ b/src/assets/sass/components/content/_main-container.scss
@@ -164,6 +164,7 @@ section.all-campaigns-content {
             background-color: #f8f8f8;
             object-fit: contain;
             display: block;
+            border-radius: 45px;
         }
 
         &:before {
