--- a/src/assets/sass/components/content/_main-container.scss
+++ b/src/assets/sass/components/content/_main-container.scss
@@ -175,7 +175,7 @@ section.all-campaigns-content {
             height: 100%;
             width: 100%;
             z-index: 1;
-            background: url(https://lh3.googleusercontent.com/-2cUWQy4FX-E/X4PWpfXwuCI/AAAAAAAADz0/I3qOh5CIw9ggQYGs1WX73RJviDcLIcZLwCK8BGAsYHg/s0/Phone.png);
+            background: url(../../assets/images/phone.png);
             background-size: contain;
             background-repeat: no-repeat;
             pointer-events: none;
