--- a/src/assets/sass/components/content/_main-container.scss
+++ b/src/assets/sass/components/content/_main-container.scss
@@ -156,7 +156,8 @@ section.all-campaigns-content {
         position: relative;
         z-index: 0;
 
-        object {
+        object,
+        iframe {
             height: 570px;
             width: 280px;
             position: relative;
