Landing page: highlight landing page which is in the preview frame.

--- a/src/assets/sass/base/elements/_datatables.scss
+++ b/src/assets/sass/base/elements/_datatables.scss
@@ -115,6 +115,18 @@ table {
     }
 }
 
+.table-landingpage {
+    .rdt_TableRow {
+        > div:first-child {
+            padding-left: 0;
+            min-width: 160px;
+        }
+    }
+    .rdt_TableHeadRow > div:first-child {
+        min-width: 180px;
+    }
+}
+
 .rdt_TableHeader {
     display: none !important;
 }
