--- a/src/assets/sass/base/elements/_icons.scss
+++ b/src/assets/sass/base/elements/_icons.scss
@@ -35,9 +35,20 @@
         }
         &.icon-profile {
             padding: 0;
+
+            img {
+                border-radius: 50%;
+                border: 1px solid #f1f1f1;
+                background: #f5f5f5;
+                object-fit: contain;
+                height: 2.5rem;
+                width: 2.5rem;
+                border-radius: 50%;
+            }
         }
     }
 }
+
 
 .icon-pause {
     font-size: size(8);
