--- a/src/assets/sass/components/navigation/_navigation.scss
+++ b/src/assets/sass/components/navigation/_navigation.scss
@@ -153,7 +153,7 @@ li.menu-item-has-children {
 
 .menu-profile {
     .profile-icon {
-        object-fit: cover;
+        object-fit: contain;
         height: size(40);
         width: size(40);
         border-radius: 50%;
