resolving issue of not loading banner image on login page

--- a/src/assets/sass/components/navigation/_navigation.scss
+++ b/src/assets/sass/components/navigation/_navigation.scss
@@ -158,6 +158,7 @@ li.menu-item-has-children {
         width: size(40);
         border-radius: 50%;
         border: solid 1px #eaeaea;
+        cursor: pointer;
     }
 
     .user-name,
