fixes issue of graph label

--- a/src/assets/sass/base/elements/_chart.scss
+++ b/src/assets/sass/base/elements/_chart.scss
@@ -120,7 +120,16 @@ g.c3-axis text {
             }
         }
     }
+
+    .c3-tooltip-name--ctr .name {
+        text-transform: uppercase;
+    }
+
+    .c3-tooltip-name--convrate .name {
+        text-transform: initial;
+    }
 }
+
 
 .c3-legend-item-tile {
     shape-rendering: auto;
